--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.1",
     "swiper": "^6.7.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.13",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
